DemoAPI/demo-api-ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-ingress
  namespace: demo-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /demo-api-blue(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-api-blue
            port:
              number: 80
      - path: /demo-api-green(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-api-green
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-api-green
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-ingress-static
  namespace: demo-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: demo-api-blue
            port: 
              number: 80
        path: /static(/|$)(.*)
